# FigureArea

./: CMakeLists.txt  README.md  area_calculator.cpp  area_calculator.hpp  input_readers.cpp  input_readers.hpp  input_readers_tests.cpp  main.cpp
src/: CMakeLists.txt  figures.cpp  figures.hpp  input_readers.hpp  main.cpp
tests/: CMakeLists.txt  area_calculator_tests.cpp  figures_tests.cpp
